WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271778
[iOS] 3 fast/viewport/ios/viewport-fit-*.html layout tests constantly failing.
https://bugs.webkit.org/show_bug.cgi?id=271778
Summary
[iOS] 3 fast/viewport/ios/viewport-fit-*.html layout tests constantly failing.
Ben Schwartz
Reported
2024-03-27 12:00:13 PDT
The following three tests, currently skipped by an ancient expectation due to them being unsupported below iOS 11, are constantly failing: fast/viewport/ios/viewport-fit-contain.html fast/viewport/ios/viewport-fit-cover.html fast/viewport/ios/viewport-fit-auto.html HISTORY: None (these are skipped). TEXT DIFF: Viewport: initial-scale=1, viewport-fit=auto -Window Size: 260 x 538 +Window Size: 330 x 787 scale 1.00000 maxScale 5.00000 minScale 1.00000 -visibleRect {"left":"-40.00000","top":"-10.00000","width":"320.00000","height":"548.00000"} +visibleRect {"left":"-40.00000","top":"-10.00000","width":"390.00000","height":"797.00000"} REPRODUCIBILITY: I was able to reproduce this issue on the iOS Simulator (17.4/21E213) ToT using the following command: run-webkit-tests --ios-simulator -v fast/viewport/ios/viewport-fit-contain.html fast/viewport/ios/viewport-fit-cover.html fast/viewport/ios/viewport-fit-auto.html --child-processes 1 --skipped ignore REGRESSION: Contextual information indicates that, if these tests had been unskipped at the proper time, this test would've regressed when we stopped testing on iPhone SE and moved to iPhone 12 (as the old screen dimensions seem to match iPhone SE, and the new ones seem to match iPhone 12). This would make these tests re-baseline candidates.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-27 12:00:45 PDT
<
rdar://problem/125502337
>
Abrar Rahman Protyasha
Comment 2
2024-03-27 12:17:55 PDT
As Ben notes, these are rebaseline candidates. I'll get to it some time this week.
Abrar Rahman Protyasha
Comment 3
2024-03-29 13:26:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26618
EWS
Comment 4
2024-03-29 17:06:09 PDT
Committed
276847@main
(dfe516cf9002): <
https://commits.webkit.org/276847@main
> Reviewed commits have been landed. Closing PR #26618 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug