[iOS] 3 fast/viewport/ios/viewport-fit-*.html layout tests constantly failing. https://bugs.webkit.org/show_bug.cgi?id=271778 rdar://125502337

Reviewed by Wenson Hsieh.

This patch addresses the failing fast/viewport/ios/viewport-fit-*.html
layout tests in two distinct ways:

1. The test expectations around the screen dimensions were updated to
   reflect the fact that layout tests now run in an iPhone 12 simulator,
   and not an iPhone SE simulator, which the stale expectations
   correspond to.

2. The tests sometimes flakily fail because some overriden safe area
   inset values are not reflected in the screen dimensions queried
   post visible rect update. This is fixed by delegating that same test
   query to after a visible rect update and the next stable presentation
   update, which required hooking up some new functionality in WKWebView
   testing API, as well as UIScriptController.

* LayoutTests/fast/viewport/ios/viewport-fit-auto-expected.txt:
* LayoutTests/fast/viewport/ios/viewport-fit-auto.html:
* LayoutTests/fast/viewport/ios/viewport-fit-contain-expected.txt:
* LayoutTests/fast/viewport/ios/viewport-fit-contain.html:
* LayoutTests/fast/viewport/ios/viewport-fit-cover-expected.txt:
* LayoutTests/fast/viewport/ios/viewport-fit-cover.html:

* LayoutTests/platform/ios/TestExpectations:
Remove the failing annotations for the tests we're addressing.

* Source/WebKit/UIProcess/API/ios/WKWebViewPrivateForTestingIOS.h:
* Source/WebKit/UIProcess/API/ios/WKWebViewTestingIOS.mm:
(-[WKWebView _doAfterNextVisibleContentRectAndStablePresentationUpdate:]):
* Tools/TestRunnerShared/UIScriptContext/Bindings/UIScriptController.idl:
* Tools/TestRunnerShared/UIScriptContext/UIScriptController.h:
(WTR::UIScriptController::doAfterNextVisibleContentRectAndStablePresentationUpdate):
* Tools/WebKitTestRunner/ios/UIScriptControllerIOS.h:
* Tools/WebKitTestRunner/ios/UIScriptControllerIOS.mm:
(WTR::UIScriptControllerIOS::doAfterNextVisibleContentRectAndStablePresentationUpdate):
(WTR::UIScriptControllerIOS::zoomToScale):
(WTR::setModifierFlagsForUIPhysicalKeyboardEvent): Deleted.

Canonical link: https://commits.webkit.org/276847@main